[project]
name = "east-pytorch"
version = "0.0.2"
authors = [
    {name = "Yakhyokhuja Valikhujaev", email = "yakhyo9696@gmail.com"}
]
description = "EAST: An Efficient and Accurate Scene Text Detector"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}


[tool.usort]

first_party_detection = false

[tool.black]

line-length = 120
target-version = ["py38", "py39", "py310"]

[tool.ufmt]

excludes = [
    "docs/",
]

[build-system]

requires = ["setuptools", "wheel"]
